--- a/test.ipynb
+++ b/test.ipynb
@@ -9,12 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi\n"
+      "Hi\n",
+      "Wo?\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hi\")"
+    "print(\"Hi\")\n",
+    "print(\"Wo?\")"
    ]
   }
  ],
