--- a/test.ipynb
+++ b/test.ipynb
@@ -18,6 +18,161 @@
     "print(\"Hi\")\n",
     "print(\"Wo?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from math import radians, sin, cos, sqrt, atan2\n",
+    "import heapq\n",
+    "from collections import defaultdict\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load data\n",
+    "node_coords = np.loadtxt('./nodepl.txt')\n",
+    "node_list = np.loadtxt('./nodelist.txt', dtype=int)\n",
+    "arc_data = pd.read_csv('./arclist.txt', delim_whitespace=True, header=None,\n",
+    "                       names=[\"destination\", \"time\", \"distance\", \"speed_limit\", \"clazz\", \"flags\"])\n",
+    "arc_data['time'] *= 3600  # Convert time to seconds\n",
+    "\n",
+    "# Haversine function to calculate distance between two points\n",
+    "def haversine(lat1, lon1, lat2, lon2):\n",
+    "    R = 6371  # Earth radius in km\n",
+    "    dlat = radians(lat2 - lat1)\n",
+    "    dlon = radians(lon2 - lon1)\n",
+    "    a = sin(dlat / 2) ** 2 + cos(radians(lat1)) * cos(radians(lat2)) * sin(dlon / 2) ** 2\n",
+    "    c = 2 * atan2(sqrt(a), sqrt(1 - a))\n",
+    "    return R * c\n",
+    "\n",
+    "# Set home coordinates and find nearest node\n",
+    "home_lat, home_lon = 47.065307430925586, 15.44306321533678\n",
+    "distances = [haversine(home_lat, home_lon, lat, lon) for lat, lon in node_coords]\n",
+    "start_node = np.argmin(distances) + 1  # 1-based node ID\n",
+    "\n",
+    "# Build graph\n",
+    "graph = defaultdict(list)\n",
+    "for index, row in arc_data.iterrows():\n",
+    "    if index >= len(node_list):  # Skip if index is out of bounds for node_list\n",
+    "        continue\n",
+    "    source = node_list[index] - 1  # Convert 1-based index to 0-based for internal use\n",
+    "    destination, time, distance = row['destination'] - 1, row['time'], row['distance']\n",
+    "    graph[source].append((destination, time, distance, row['clazz'], row['flags']))\n",
+    "\n",
+    "def dijkstra(graph, start, target, cost_type='time'):\n",
+    "    queue = [(0, start)]\n",
+    "    # Initialize distances with all nodes in graph as integer keys\n",
+    "    distances = {int(node): float('inf') for node in graph}\n",
+    "    distances[start] = 0\n",
+    "    predecessors = {start: None}\n",
+    "\n",
+    "    while queue:\n",
+    "        current_distance, current_node = heapq.heappop(queue)\n",
+    "\n",
+    "        if current_node == target:\n",
+    "            break\n",
+    "\n",
+    "        if current_distance > distances[current_node]:\n",
+    "            continue\n",
+    "\n",
+    "        for neighbor, time, distance, clazz, flags in graph[current_node]:\n",
+    "            neighbor = int(neighbor)  # Ensure neighbor is an integer key\n",
+    "            if neighbor not in distances:\n",
+    "                distances[neighbor] = float('inf')  # Add missing neighbor with default distance\n",
+    "\n",
+    "            # Choose cost type\n",
+    "            cost = time if cost_type == 'time' else distance\n",
+    "            distance_via_current = current_distance + cost\n",
+    "\n",
+    "            # Update shortest path\n",
+    "            if distance_via_current < distances[neighbor]:\n",
+    "                distances[neighbor] = distance_via_current\n",
+    "                predecessors[neighbor] = current_node\n",
+    "                heapq.heappush(queue, (distance_via_current, neighbor))\n",
+    "\n",
+    "    return distances, predecessors\n",
+    "\n",
+    "\n",
+    "# Custom cost function (weighted combination of time and distance)\n",
+    "def custom_cost(row):\n",
+    "    time_weight, distance_weight = 0.5, 0.5\n",
+    "    return time_weight * row['time'] + distance_weight * row['distance']\n",
+    "\n",
+    "# Dijkstra’s algorithm with custom cost\n",
+    "def dijkstra_custom(graph, start, target):\n",
+    "    queue = [(0, start)]\n",
+    "    distances = {node: float('inf') for node in graph}\n",
+    "    distances[start] = 0\n",
+    "    predecessors = {start: None}\n",
+    "\n",
+    "    while queue:\n",
+    "        current_distance, current_node = heapq.heappop(queue)\n",
+    "        if current_node == target:\n",
+    "            break\n",
+    "\n",
+    "        for neighbor, time, distance, clazz, flags in graph[current_node]:\n",
+    "            cost = custom_cost({'time': time, 'distance': distance})\n",
+    "            distance_via_current = current_distance + cost\n",
+    "            if distance_via_current < distances[neighbor]:\n",
+    "                distances[neighbor] = distance_via_current\n",
+    "                predecessors[neighbor] = current_node\n",
+    "                heapq.heappush(queue, (distance_via_current, neighbor))\n",
+    "\n",
+    "    return distances, predecessors\n",
+    "\n",
+    "# Plotting function for routes\n",
+    "def plot_route(predecessors, start, destination):\n",
+    "    route = []\n",
+    "    node = destination\n",
+    "    while node is not None:\n",
+    "        route.append(node)\n",
+    "        node = predecessors.get(node)\n",
+    "    route = route[::-1]\n",
+    "\n",
+    "    lats, lons = zip(*[node_coords[node] for node in route])\n",
+    "    plt.plot(lons, lats, marker='o')\n",
+    "    plt.xlabel(\"Longitude\")\n",
+    "    plt.ylabel(\"Latitude\")\n",
+    "    plt.title(f\"Route from {start} to {destination}\")\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# Destinations in Graz\n",
+    "destinations = [9328, 6031, 8543]\n",
+    "results = {}\n",
+    "\n",
+    "# Berechnung der Distanzen für jedes Ziel\n",
+    "for dest in destinations:\n",
+    "    distances, predecessors = dijkstra(graph, start_node - 1, dest - 1, cost_type='time')\n",
+    "    results[dest] = {\n",
+    "        'time': (distances, predecessors),\n",
+    "        'distance': dijkstra(graph, start_node - 1, dest - 1, cost_type='distance'),\n",
+    "        'custom': dijkstra_custom(graph, start_node - 1, dest - 1)\n",
+    "    }\n",
+    "\n",
+    "    # Prüfen, ob der Zielknoten in den Distanzen vorhanden ist\n",
+    "    if dest - 1 in distances:  # 0-basierter Index\n",
+    "        print(f\"Shortest Distance to node {dest}: {distances[dest - 1]} units\")\n",
+    "    else:\n",
+    "        print(f\"Node {dest} is not reachable.\")\n",
+    "\n",
+    "# Plot and compare routes for each destination\n",
+    "for dest in destinations:\n",
+    "    print(f\"\\nRoutes to destination node {dest}:\")\n",
+    "    for cost_type, (distances, predecessors) in results[dest].items():\n",
+    "        print(f\"\\nCost Type: {cost_type.capitalize()}\")\n",
+    "\n",
+    "        # Ausgabe der kürzesten Distanz zum Ziel\n",
+    "        if dest - 1 in distances:\n",
+    "            print(f\"Shortest Distance: {distances[dest - 1]} units\")\n",
+    "        else:\n",
+    "            print(f\"Node {dest} is not reachable.\")\n",
+    "\n",
+    "        plot_route(predecessors, start_node, dest)\n"
+   ]
   }
  ],
  "metadata": {
