--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from math import radians, sin, cos, sqrt, atan2\n",
-    "import heapq\n",
-    "from collections import defaultdict\n",
-    "import matplotlib.pyplot as plt"
+    "from collections import defaultdict"
    ]
   },
   {
